--- a/feature_engineering/test_feature_engineering.ipynb
+++ b/feature_engineering/test_feature_engineering.ipynb
@@ -107,131 +107,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ty/th__2_pn1js9hzn2y7l830wr0000gn/T/ipykernel_11985/3130400999.py:25: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
-      "  skew(axis),\n",
-      "/var/folders/ty/th__2_pn1js9hzn2y7l830wr0000gn/T/ipykernel_11985/3130400999.py:26: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
-      "  kurtosis(axis)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 已輸出測試特徵至：/Users/yuchingchen/Documents/AI_CUP/feature_engineering/test_features.csv，共 1430 筆\n"
+      "✅ 已輸出測試集特徵：/Users/yuchingchen/Documents/AI_CUP/feature_engineering/test_features.csv，shape = (1430, 919)\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "import os\n",
-    "import re\n",
-    "from scipy.stats import skew, kurtosis\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "from scipy.fft import fft\n",
+    "from scipy.stats import skew, kurtosis\n",
     "\n",
-    "# === 設定測試資料路徑 ===\n",
-    "info_path = \"/Users/yuchingchen/Documents/AI_CUP/data/39_Test_Dataset/test_info.csv\"\n",
-    "data_dir = \"/Users/yuchingchen/Documents/AI_CUP/data/39_Test_Dataset/test_data\"\n",
-    "output_csv_path = \"/Users/yuchingchen/Documents/AI_CUP/feature_engineering/test_features.csv\"\n",
+    "# === 0. 路徑 ===\n",
+    "TEST_INFO_CSV = \"/Users/yuchingchen/Documents/AI_CUP/data/39_Test_Dataset/test_info.csv\"\n",
+    "TEST_DATA_DIR = \"/Users/yuchingchen/Documents/AI_CUP/data/39_Test_Dataset/test_data\"\n",
+    "OUTPUT_PATH   = \"/Users/yuchingchen/Documents/AI_CUP/feature_engineering/test_features.csv\"\n",
     "\n",
-    "# === 特徵擷取函數（每段 34 維）===\n",
-    "def extract_34_features(segment):\n",
-    "    features = []\n",
-    "    norm_acc = np.linalg.norm(segment[:, 0:3], axis=1)\n",
-    "    norm_gyro = np.linalg.norm(segment[:, 3:6], axis=1)\n",
+    "# === 1. 讀入 test_info.csv ===\n",
+    "test_info = pd.read_csv(TEST_INFO_CSV, dtype={\"unique_id\": str})\n",
     "\n",
-    "    for i in range(segment.shape[1]):\n",
-    "        axis = segment[:, i]\n",
-    "        features.extend([\n",
-    "            np.mean(axis),\n",
-    "            np.var(axis),\n",
-    "            np.sqrt(np.mean(axis ** 2)),\n",
-    "            skew(axis),\n",
-    "            kurtosis(axis)\n",
-    "        ])\n",
+    "# === 2. 定義和 train 完全相同的 34 維特徵擷取函式 ===\n",
+    "def extract_34_features(segment: np.ndarray) -> list:\n",
+    "    feats = []\n",
+    "    # (1) 各軸 mean, var, rms\n",
+    "    for i in range(6):\n",
+    "        x = segment[:, i]\n",
+    "        feats += [x.mean(), x.var(), np.sqrt((x**2).mean())]\n",
     "\n",
-    "    features.extend([\n",
-    "        np.max(norm_acc), np.min(norm_acc), np.mean(norm_acc),\n",
-    "        np.max(norm_gyro), np.min(norm_gyro), np.mean(norm_gyro)\n",
-    "    ])\n",
+    "    # (2) acc/gyro max, min, mean\n",
+    "    acc  = np.linalg.norm(segment[:, :3], axis=1)\n",
+    "    gyro = np.linalg.norm(segment[:, 3:], axis=1)\n",
+    "    for arr in (acc, gyro):\n",
+    "        feats += [arr.max(), arr.min(), arr.mean()]\n",
     "\n",
-    "    for group in [segment[:, 0:3], segment[:, 3:6]]:\n",
-    "        magnitude = np.linalg.norm(group, axis=1)\n",
-    "        fft_vals = np.abs(fft(magnitude))\n",
-    "        power = np.mean(fft_vals ** 2)\n",
-    "        entropy = -np.sum((fft_vals / np.sum(fft_vals)) * np.log2((fft_vals + 1e-12) / np.sum(fft_vals)))\n",
-    "        features.append(power)\n",
-    "        features.append(entropy)\n",
+    "    # (3) acc/gyro 的 kurtosis, skewness, power, spectral entropy\n",
+    "    def spec_stats(arr):\n",
+    "        Xf = np.abs(fft(arr))**2\n",
+    "        psd = Xf / (Xf.sum() + 1e-12)\n",
+    "        power   = Xf.mean()\n",
+    "        entropy = -(psd * np.log(psd + 1e-12)).sum()\n",
+    "        return kurtosis(arr), skew(arr), power, entropy\n",
     "\n",
-    "    return features\n",
+    "    for arr in (acc, gyro):\n",
+    "        feats += list(spec_stats(arr))\n",
     "\n",
-    "# === 主流程開始 ===\n",
-    "info_df = pd.read_csv(info_path)\n",
-    "all_features = []\n",
-    "all_uids = []\n",
+    "    # (4) 各軸的 kurtosis 平均、skewness 平均（若序列常數則直接給 0）  \n",
+    "    k_list = []\n",
+    "    s_list = []\n",
+    "    for i in range(6):\n",
+    "        arr = segment[:, i]\n",
+    "        # 如果整段都是相同值，直接填 0\n",
+    "        if np.allclose(arr, arr[0], atol=1e-8):\n",
+    "            k_list.append(0.0)\n",
+    "            s_list.append(0.0)\n",
+    "        else:\n",
+    "            k_list.append(kurtosis(arr))\n",
+    "            s_list.append(skew(arr))\n",
+    "    feats += [np.mean(k_list), np.mean(s_list)]\n",
     "\n",
-    "for idx, row in info_df.iterrows():\n",
-    "    uid = row['unique_id']\n",
-    "    file_path = os.path.join(data_dir, f\"{uid}.txt\")\n",
+    "    return feats\n",
     "\n",
-    "    try:\n",
-    "        data = np.loadtxt(file_path)\n",
-    "    except Exception as e:\n",
-    "        print(f\"[跳過] 無法讀取 {file_path}: {e}\")\n",
-    "        continue\n",
+    "# === 3. 對所有測試檔案擷取特徵並攤平成一列 ===\n",
+    "rows = []\n",
+    "uids = []\n",
+    "for _, row in test_info.iterrows():\n",
+    "    uid  = row.unique_id\n",
+    "    # parse cut_point\n",
+    "    cuts = list(map(int, str(row.cut_point).strip(\"[]\").split()))\n",
+    "    data = np.loadtxt(os.path.join(TEST_DATA_DIR, f\"{uid}.txt\"))\n",
     "\n",
-    "    cut_str = str(row['cut_point'])\n",
-    "    cut_str = re.sub(r\"[\\[\\]\\n\\r]\", \" \", cut_str)\n",
-    "    try:\n",
-    "        cut_points = list(map(int, cut_str.strip().split()))\n",
-    "    except:\n",
-    "        print(f\"[跳過] UID={uid} 的 cut_point 轉換失敗：{cut_str}\")\n",
-    "        continue\n",
-    "\n",
-    "    if len(cut_points) != 28:\n",
-    "        print(f\"[跳過] UID={uid} 的 cut_point 長度錯誤（{len(cut_points)}）：{cut_str}\")\n",
-    "        continue\n",
-    "\n",
-    "    feature_vec = []\n",
-    "    valid = True\n",
+    "    feat_row = []\n",
     "    for i in range(27):\n",
-    "        start, end = cut_points[i], cut_points[i+1]\n",
-    "        if start >= end or end > data.shape[0]:\n",
-    "            print(f\"[跳過] UID={uid} 的第 {i+1} 段資料範圍錯誤：{start} ~ {end}\")\n",
-    "            valid = False\n",
-    "            break\n",
-    "        segment = data[start:end]\n",
-    "        feature_vec.extend(extract_34_features(segment))  # 共 27 段 × 34 維 = 918 維\n",
+    "        s, e = cuts[i], cuts[i+1]\n",
+    "        segment = data[s:e, :]\n",
+    "        feat_row += extract_34_features(segment)\n",
     "\n",
-    "    if not valid:\n",
-    "        continue\n",
+    "    rows.append(feat_row)\n",
+    "    uids.append(uid)\n",
     "\n",
-    "    # ➕ 插入 unique_id 欄位\n",
-    "    feature_vec.insert(0, uid)\n",
-    "    all_features.append(feature_vec)\n",
+    "# === 4. 建立 DataFrame 並輸出 CSV ===\n",
+    "# 欄位自動命名 f0...f(n-1)\n",
+    "n_feats = len(rows[0])\n",
+    "col_names = [f\"f{i}\" for i in range(n_feats)]\n",
     "\n",
-    "# === 組合欄位名稱 ===\n",
-    "columns = ['unique_id']\n",
-    "for i in range(27):\n",
-    "    for axis in ['Ax', 'Ay', 'Az', 'Gx', 'Gy', 'Gz']:\n",
-    "        for stat in ['mean', 'var', 'rms', 'skew', 'kurt']:\n",
-    "            columns.append(f\"seg{i+1}_{axis}_{stat}\")\n",
-    "    columns += [f\"seg{i+1}_acc_max\", f\"seg{i+1}_acc_min\", f\"seg{i+1}_acc_mean\"]\n",
-    "    columns += [f\"seg{i+1}_gyro_max\", f\"seg{i+1}_gyro_min\", f\"seg{i+1}_gyro_mean\"]\n",
-    "    columns += [f\"seg{i+1}_acc_power\", f\"seg{i+1}_acc_entropy\"]\n",
-    "    columns += [f\"seg{i+1}_gyro_power\", f\"seg{i+1}_gyro_entropy\"]\n",
+    "df_feats = pd.DataFrame(rows, columns=col_names)\n",
+    "df_feats.insert(0, \"unique_id\", uids)\n",
     "\n",
-    "# === 儲存成 CSV ===\n",
-    "df_test = pd.DataFrame(all_features, columns=columns)\n",
-    "df_test.to_csv(output_csv_path, index=False)\n",
-    "print(f\"✅ 已輸出測試特徵至：{output_csv_path}，共 {len(df_test)} 筆\")"
+    "os.makedirs(os.path.dirname(OUTPUT_PATH), exist_ok=True)\n",
+    "df_feats.to_csv(OUTPUT_PATH, index=False)\n",
+    "print(f\"✅ 已輸出測試集特徵：{OUTPUT_PATH}，shape = {df_feats.shape}\")"
    ]
   }
  ],
