--- a/feature_engineering/train_feature_engineering.ipynb
+++ b/feature_engineering/train_feature_engineering.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "(1955, 8)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,6 +30,59 @@
     "train_info = pd.read_csv('/Users/yuchingchen/Documents/AI_CUP/data/39_Training_Dataset/train_info.csv')\n",
     "\n",
     "train_info.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mode\n",
+      "10    829\n",
+      "9     785\n",
+      "8      45\n",
+      "7      44\n",
+      "1      42\n",
+      "2      42\n",
+      "3      42\n",
+      "4      42\n",
+      "5      42\n",
+      "6      42\n",
+      "Name: count, dtype: int64\n",
+      "gender\n",
+      "1    1627\n",
+      "2     328\n",
+      "Name: count, dtype: int64\n",
+      "hold racket handed\n",
+      "1    1589\n",
+      "2     366\n",
+      "Name: count, dtype: int64\n",
+      "play years\n",
+      "1    868\n",
+      "2    700\n",
+      "0    387\n",
+      "Name: count, dtype: int64\n",
+      "level\n",
+      "5    903\n",
+      "2    715\n",
+      "3    201\n",
+      "4    136\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 看 value.count()\n",
+    "\n",
+    "print(train_info[\"mode\"].value_counts())\n",
+    "print(train_info[\"gender\"].value_counts())\n",
+    "print(train_info[\"hold racket handed\"].value_counts())\n",
+    "print(train_info[\"play years\"].value_counts())\n",
+    "print(train_info[\"level\"].value_counts())\n"
    ]
   },
   {
@@ -84,127 +137,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "已輸出特徵資料至：train_features.csv，共 1955 筆\n"
+      "✅ 特徵檔已輸出：/Users/yuchingchen/Documents/AI_CUP/feature_engineering/train_features.csv，共 1955 筆，每筆 924 欄\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "import os\n",
-    "import re\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "from scipy.stats import skew, kurtosis\n",
     "from scipy.fft import fft\n",
+    "from joblib import Parallel, delayed\n",
     "\n",
-    "# === 設定資料路徑 ===\n",
-    "info_path = \"data/39_Training_Dataset/train_info.csv\"\n",
-    "data_dir = \"data/39_Training_Dataset/train_data\"\n",
-    "output_csv_path = \"feature_engineering/train_features.csv\"\n",
+    "# === 資料路徑 ===\n",
+    "info_path       = \"/Users/yuchingchen/Documents/AI_CUP/data/39_Training_Dataset/train_info.csv\"\n",
+    "data_dir        = \"/Users/yuchingchen/Documents/AI_CUP/data/39_Training_Dataset/train_data\"\n",
+    "output_csv_path = \"/Users/yuchingchen/Documents/AI_CUP/feature_engineering/train_features.csv\"\n",
     "\n",
-    "# === 特徵擷取：每段提取 34 維 ===\n",
+    "# 1. 讀取 info\n",
+    "info_df = pd.read_csv(info_path, dtype={\"unique_id\": str})\n",
+    "\n",
     "def extract_34_features(segment):\n",
-    "    features = []\n",
-    "    norm_acc = np.linalg.norm(segment[:, 0:3], axis=1)  # Ax,Ay,Az\n",
-    "    norm_gyro = np.linalg.norm(segment[:, 3:6], axis=1)  # Gx,Gy,Gz\n",
+    "    feats = []\n",
+    "    # 1. 軸向 mean, var, rms  (6×3 = 18)\n",
+    "    for i in range(6):\n",
+    "        x = segment[:, i]\n",
+    "        feats += [x.mean(), x.var(), np.sqrt((x**2).mean())]\n",
+    "    # 2. 整體 acc/gyro max, min, mean  (2×3 = 6)\n",
+    "    acc  = np.linalg.norm(segment[:, :3], axis=1)\n",
+    "    gyro = np.linalg.norm(segment[:, 3:], axis=1)\n",
+    "    for arr in (acc, gyro):\n",
+    "        feats += [arr.max(), arr.min(), arr.mean()]\n",
+    "    # 3. 群組 kurtosis, skewness, power, spectral entropy  (2×4 = 8)\n",
+    "    def spec_stats(arr):\n",
+    "        Xf      = np.abs(fft(arr))**2\n",
+    "        psd     = Xf / (Xf.sum() + 1e-12)\n",
+    "        power   = Xf.mean()\n",
+    "        entropy = -(psd * np.log(psd + 1e-12)).sum()\n",
+    "        return kurtosis(arr), skew(arr), power, entropy\n",
+    "    for arr in (acc, gyro):\n",
+    "        feats += list(spec_stats(arr))\n",
+    "    # 4. 軸向高階平均：mean(kurtosis), mean(skewness)  (2)\n",
+    "    kurt_ax = [kurtosis(segment[:, i]) for i in range(6)]\n",
+    "    skew_ax = [skew   (segment[:, i]) for i in range(6)]\n",
+    "    feats += [np.mean(kurt_ax), np.mean(skew_ax)]\n",
     "\n",
-    "    for i in range(segment.shape[1]):\n",
-    "        axis = segment[:, i]\n",
-    "        features.extend([\n",
-    "            np.mean(axis),\n",
-    "            np.var(axis),\n",
-    "            np.sqrt(np.mean(axis ** 2)),\n",
-    "            skew(axis),\n",
-    "            kurtosis(axis)\n",
-    "        ])\n",
+    "    assert len(feats) == 34, f\"維度錯誤：{len(feats)} != 34\"\n",
+    "    return feats\n",
     "\n",
-    "    features.extend([\n",
-    "        np.max(norm_acc), np.min(norm_acc), np.mean(norm_acc),\n",
-    "        np.max(norm_gyro), np.min(norm_gyro), np.mean(norm_gyro)\n",
-    "    ])\n",
-    "\n",
-    "    # 頻域特徵（取加速度 + 角速度合併）\n",
-    "    for group in [segment[:, 0:3], segment[:, 3:6]]:  # acc, gyro\n",
-    "        magnitude = np.linalg.norm(group, axis=1)\n",
-    "        fft_vals = np.abs(fft(magnitude))\n",
-    "        power = np.mean(fft_vals ** 2)\n",
-    "        entropy = -np.sum((fft_vals / np.sum(fft_vals)) * np.log2((fft_vals + 1e-12) / np.sum(fft_vals)))\n",
-    "        features.append(power)\n",
-    "        features.append(entropy)\n",
-    "\n",
-    "    return features  # 共 6 軸 * 5 + 6 + 4 = 34 維\n",
-    "\n",
-    "# === 主流程開始 ===\n",
-    "info_df = pd.read_csv(info_path)\n",
-    "all_features = []\n",
-    "\n",
-    "for idx, row in info_df.iterrows():\n",
-    "    uid = row['unique_id']\n",
-    "    file_path = os.path.join(data_dir, f\"{uid}.txt\")\n",
-    "\n",
-    "    try:\n",
-    "        data = np.loadtxt(file_path)\n",
-    "    except Exception as e:\n",
-    "        print(f\"[跳過] 無法讀取 {file_path}: {e}\")\n",
-    "        continue\n",
-    "\n",
-    "    cut_str = str(row['cut_point'])\n",
-    "    cut_str = re.sub(r\"[\\[\\]\\n\\r]\", \" \", cut_str)\n",
-    "    try:\n",
-    "        cut_points = list(map(int, cut_str.strip().split()))\n",
-    "    except:\n",
-    "        print(f\"[跳過] UID={uid} 的 cut_point 轉換失敗：{cut_str}\")\n",
-    "        continue\n",
-    "\n",
-    "    if len(cut_points) != 28:\n",
-    "        print(f\"[跳過] UID={uid} 的 cut_point 長度錯誤（目前 {len(cut_points)}）：{cut_str}\")\n",
-    "        continue\n",
-    "\n",
-    "    feature_vec = []\n",
-    "    valid = True\n",
+    "def process_row(row):\n",
+    "    uid = row[\"unique_id\"]\n",
+    "    # 解析切割點\n",
+    "    raw  = str(row[\"cut_point\"]).strip(\"[]\").split()\n",
+    "    cuts = list(map(int, raw))\n",
+    "    # 讀檔\n",
+    "    data = np.loadtxt(os.path.join(data_dir, f\"{uid}.txt\"))\n",
+    "    vec  = []\n",
+    "    # 對 27 段做特徵擷取\n",
     "    for i in range(27):\n",
-    "        start, end = cut_points[i], cut_points[i+1]\n",
-    "        if start >= end or end > data.shape[0]:\n",
-    "            print(f\"[跳過] UID={uid} 的第 {i+1} 段資料範圍錯誤：{start} ~ {end}\")\n",
-    "            valid = False\n",
-    "            break\n",
-    "        segment = data[start:end]\n",
-    "        feature_vec.extend(extract_34_features(segment))\n",
+    "        s, e = cuts[i], cuts[i+1]\n",
+    "        if e > data.shape[0]:\n",
+    "            return None\n",
+    "        vec += extract_34_features(data[s:e, :])\n",
+    "    # 加上 6 欄標籤\n",
+    "    vec += [\n",
+    "        uid,\n",
+    "        row[\"player_id\"],\n",
+    "        row[\"gender\"],\n",
+    "        row[\"hold racket handed\"],\n",
+    "        row[\"play years\"],\n",
+    "        row[\"level\"]\n",
+    "    ]\n",
+    "    return vec\n",
     "\n",
-    "    if not valid:\n",
-    "        continue\n",
+    "# 2. 並行處理所有列\n",
+    "results = Parallel(n_jobs=8, backend=\"loky\")(\n",
+    "    delayed(process_row)(row) for _, row in info_df.iterrows()\n",
+    ")\n",
     "\n",
-    "    feature_vec.extend([\n",
-    "        row['gender'],\n",
-    "        row['hold racket handed'],\n",
-    "        row['play years'],\n",
-    "        row['level']\n",
-    "    ])\n",
-    "    all_features.append(feature_vec)\n",
+    "# 過濾失敗的\n",
+    "rows = [r for r in results if r is not None]\n",
     "\n",
-    "# === 組合欄位名稱（27 段 × 34 特徵）===\n",
-    "columns = []\n",
-    "for i in range(27):\n",
-    "    for axis in ['Ax', 'Ay', 'Az', 'Gx', 'Gy', 'Gz']:\n",
-    "        for stat in ['mean', 'var', 'rms', 'skew', 'kurt']:\n",
-    "            columns.append(f\"seg{i+1}_{axis}_{stat}\")\n",
-    "    columns += [f\"seg{i+1}_acc_max\", f\"seg{i+1}_acc_min\", f\"seg{i+1}_acc_mean\"]\n",
-    "    columns += [f\"seg{i+1}_gyro_max\", f\"seg{i+1}_gyro_min\", f\"seg{i+1}_gyro_mean\"]\n",
-    "    columns += [f\"seg{i+1}_acc_power\", f\"seg{i+1}_acc_entropy\"]\n",
-    "    columns += [f\"seg{i+1}_gyro_power\", f\"seg{i+1}_gyro_entropy\"]\n",
+    "# 3. 生成欄位名稱\n",
+    "n_total = len(rows[0])\n",
+    "n_feat  = n_total - 6\n",
+    "feat_cols  = [f\"f{i}\" for i in range(n_feat)]\n",
+    "label_cols = [\"unique_id\", \"player_id\", \"gender\", \"hold racket handed\", \"play years\", \"level\"]\n",
+    "columns    = feat_cols + label_cols\n",
     "\n",
-    "columns += ['gender', 'hand', 'play_years', 'level']\n",
-    "\n",
-    "# === 儲存成 CSV ===\n",
-    "df = pd.DataFrame(all_features, columns=columns)\n",
+    "# 4. 輸出\n",
+    "df = pd.DataFrame(rows, columns=columns)\n",
     "df.to_csv(output_csv_path, index=False)\n",
-    "print(f\"已輸出特徵資料至：{output_csv_path}，共 {len(df)} 筆\")"
+    "print(f\"✅ 特徵檔已輸出：{output_csv_path}，共 {df.shape[0]} 筆，每筆 {df.shape[1]} 欄\")"
    ]
   }
  ],
